# aicsimageprocessing

./: .buildinfo  .bumpversion.cfg  .coverage.u18-bc01-20180624.74724.820120  .gitignore  CONTRIBUTING.md  Jenkinsfile  MANIFEST.in  Makefile  README.md  STRUCTURE.md  aicsimageprocessing.bin.html  aicsimageprocessing.html  aicsimageprocessing.segmentation.html  build.gradle  contributing.html  genindex.html  gradle.properties  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  settings.gradle  setup.cfg  setup.py  tox.ini
.github/workflows/: build-docs.yml  build-master.yml  publish.yml  test-and-lint.yml
_modules/: aicsimageprocessing.html  index.html
_modules/aicsimageprocessing/: alignMajor.html  backgroundCrop.html  backgroundSub.html  crop_img.html  flip.html  imgCenter.html  imgToCoords.html  imgToProjection.html  imshow.html  isosurfaceGenerator.html  normalization.html  resize.html  rigidAlignment.html  sdfGenerator.html  textureAtlas.html  transformation.html  (+1 more)
_sources/: aicsimageprocessing.bin.rst.txt  aicsimageprocessing.rst.txt  aicsimageprocessing.segmentation.rst.txt  index.rst.txt  modules.rst.txt
aicsimageprocessing/: __init__.py  alignMajor.py  backgroundCrop.py  backgroundSub.py  crop_img.py  diagnosticsheet.py  flip.py  imgCenter.py  imgToCoords.py  imgToProjection.py  imshow.py  isosurfaceGenerator.py  normalization.py  resize.py  rigidAlignment.py  sdfGenerator.py  textureAtlas.py  thumbnailGenerator.py  utils.py  version.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
(+23 files in other folders)
