[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE.txt

[aliases]
test=pytest

[tool:pytest]
addopts = --junitxml=build/test_report.xml -v
norecursedirs = aicsimageprocessing/tests/checkouts aicsimageprocessing.egg-info/*
python_files = aicsimageprocessing/tests/*.py

[flake8]
max-line-length = 130

[coverage:html]
directory = build/coverage_html
title = Test coverage report for aicssegmentation

[coverage:xml]
output = build/coverage.xml
